# whycode-lib

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
docs/: python.md
include/whycode/: CRawImage.h  CWhycode.h  types.h
python/: .gitignore  CMakeLists.txt  bind_CRawImage.cpp  bind_CWhycode.cpp  bind_types.cpp  pybind_wrapper.cpp
python/whycode/: __init__.py
src/whycode/: CRawImage.cpp  CTransformation.cpp  CWhycode.cpp
